--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="home-right flex s-center items-center">
             <div class="circle flex s-center items-center" id="mainImage">
                 <!-- Here in src replace the given link with your image link -->
-                <img src="./Images/main.png " alt=""style="width:400px; height:400px;">
+                <img src="main.png " alt=""style="width:400px; height:400px;">
             </div>
 
         </div>
